Thu Mar 10 16:42:09 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/ace.mpc: Add OS.h to the Headers to be installed. Thanks to
          Phil Mesnier for pointing this out.

Wed Mar  9 19:14:01 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/OS.h: Re-added OS.h due to popular demand. It's been slimmed down
          from its pre-ACE 6 days, now including primarily the OS_NS_*.h files
          which can be disabled by setting the preprocessor macro
          DO_NOT_INCLUDE_OS_H before including OS.h.
          This file is here to maintain backwards build compatibility with
          older ACE versions. Using it will slow your compile time over
          simply including the requisite OS_NS_*.h file(s).

Tue Jan 25 15:17:58 UTC 2011  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/config/acemfcexe.mpb: The SubSystem value
          for "Windows" on VC10 is "Windows", not "2" as it is for VC8-9.

Mon Feb 28 20:29:59 UTC 2011  Steve Huston  <shuston@riverace.com>

        * examples/ASX/Event_Server/Event_Server/Event_Analyzer.cpp:
        * examples/ASX/UPIPE_Event_Server/Event_Analyzer.cpp: Replaced the
          name "mod_name" with "module_name" to avoid a clash with macro
          defined in /usr/include/sys/stropts.h encountered when optimized
          build was done.

Mon Feb 28 18:10:19 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Remove the -qfuncsect
          option from CCFLAGS; it caused an occasional odd problem and the
          only reason it was added (Jul 17 2002) was to try and remove
          duplicate symbol diagnostics from template instantiations.
          Thanks to Phil Mesnier for raising this issue and identifying
          the fix.

Mon Feb 21 16:19:49 EST 2011  Steve Huston  <shuston@riverace.com>

	* ACE version 6.0a released.

Tue Feb  1 14:28:18 UTC 2011  Steve Huston  <shuston@riverace.com>
